# differentiation-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Derivation_lib/: Addition.cpp  Addition.h  CMakeLists.txt  Expression.cpp  Expression.h  Multiplication.cpp  Multiplication.h  Number.cpp  Number.h  Operation.cpp  Operation.h  Variable.cpp  Variable.h  main.cpp
Google_tests/: CMakeLists.txt  ExpressionTests.cpp
